corrected some contrast issues

--- a/code/style.css
+++ b/code/style.css
@@ -60,13 +60,16 @@ h1 {
 }
 
 .profile-image {
+    /*width: 180px;
+    height: 200px;*/
     width: 180px;
-    height: 200px;
+    height: 164px;
     border-radius: 50%;
     border: 2px solid whitesmoke;
     overflow: hidden;
     position: relative;
     top: 2rem;
+    
 }
 
 .icon-white {
@@ -103,11 +106,16 @@ h1 {
 }
 
 .orange {
-    color: #F66F19;
+    color: #BA4C08 /*#F66F19*/;
 }
 
 .white {
     color: white;
+}
+
+.purple {
+    /*color: #5A415A;*/
+    color: #362836;
 }
 
 .summary {
@@ -125,7 +133,7 @@ h1 {
     font-size: 22px;
     line-height: 27px;
     margin: 2.5rem 0;
-    background-color: #F66F19;
+    background-color: #BA4C08 /*#F66F19*/;
     padding: 2px;
     border-radius: 5px;
     display: inline-block;
@@ -146,7 +154,7 @@ h1 {
     font-weight: 700;
     font-size: 17px;
     line-height: 29px;
-    color: #F66F19;
+    color:  #BA4C08 /*#F66F19*/;
 }
 
 .image-card {
@@ -196,6 +204,7 @@ h1 {
     padding: 3px;
     font-family: 'Roboto';
     border-radius: 5px;
+    color: #362836;
 }
 
 .other-project {
@@ -205,7 +214,7 @@ h1 {
 
 .highlight {
     text-align: left;
-    color: #F66F19;
+    color:  #BA4C08 /*#F66F19*/;
 }
 
 .bold {
@@ -290,8 +299,10 @@ div.tooltip[aria-hidden="true"] {
     }
 
     .profile-image {
+        /*width: 300px;
+        height: 320px;*/
         width: 300px;
-        height: 320px;
+        height: 274px;
     }
 
     .icon-white {
@@ -355,7 +366,9 @@ div.tooltip[aria-hidden="true"] {
 @media (min-width: 1025px) {
     .profile-image {
         width: 330px;
-        height: 350px;
+        height: 301px;
+        /*width: 330px;
+        height: 350px;*/
     }
    
     .project-image:hover {
